# Ukko

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  common.hpp  display.hpp  file.hpp  forecast.cpp  forecast.hpp  gpio.hpp  hwif.hpp  message_queue.hpp  net-stuff.cpp  net-stuff.hpp  netatmo.cpp  netatmo.hpp  screen.hpp  settings.hpp  something.cpp  something.hpp  spi.hpp  ukko.cpp  ukko.hpp  ukko.service  utils.hpp  weather-parse.cpp  weather.hpp  web-server.hpp  web.hpp
src/: common.hpp  display.hpp  file.hpp  gpio.hpp  hwif.hpp  netatmo.cpp  netatmo.hpp  screen.hpp  settings.hpp  token-storage.hpp  ukko.cpp  ukko.hpp  web-server.hpp
